<resources>
    <string name="app_name">CampusBuy</string>
    <string name="app_name_show">Campus Buy</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_regno">RegNo</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="agree_to_terms">I Agree To The <u>Terms &amp; Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_don_t_match">Password and Confirm password do not match.</string>
    <string name="err_msg_agree_terms">Please agree to terms and conditions.</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_description">Enter your e-mail address we\'ll send you an email to reset password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">Email sent successfully to reset your password!</string>

    <string name="register_success">You are registered successfully.</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">You denied read storage permission, please allow it from settings</string>

    <string name="image_selection_failed">Image selection failed!</string>

    <string name="err_msg_enter_mobile_number">Please enter valid mobile number</string>

    <string name="msg_profile_update_success">Your profile was updated successfully</string>

    <!--    <string name="title_activity_dashboard">DashboardActivity</string>-->
    <string name="title_orders">Orders</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="action_add_prodtct">Add Product</string>

    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title (keep it short)</string>
    <string name="et_hint_product_price">Product Price (₹)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_tag">Product Tag (book, technology, utility, etc)</string>

    <string name="err_msg_select_product_image">Please Select Product Image</string>
    <string name="err_msg_enter_product_title">Please Enter Product Title</string>
    <string name="err_msg_enter_product_price">Please Enter Product Price</string>
    <string name="err_msg_enter_product_description">Please Enter Product Description</string>
    <string name="err_msg_enter_product_tag">Please Enter Product Tag</string>

    <string name="product_upload_success_msg">Product Uploaded Successfully</string>

    <string name="no_products_added_yet">No Products Added yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_dashboard_items_found">No Items Found</string>

    <string name="product_delete_success_msg">Your product was deleted successfully</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>

    <string name="offer_button_text">offer &amp; chat</string>
    <string name="see_product_chats_text">See Offers</string>
    <string name="et_hint_select_campus">Select Campus</string>
    <string name="seller_product">Seller:</string>
    <string name="enter_campus">Please Enter Campus</string>

    <string-array name="Tags">
        <item>Technology</item>
        <item>Education</item>
        <item>Utility</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>

</resources>